--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"tsx ./mvpninebox.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,8 +22,5 @@
   "bugs": {
     "url": "https://github.com/MerciaMartins/mvp-ninebox-avalia-o/issues"
   },
-  "homepage": "https://github.com/MerciaMartins/mvp-ninebox-avalia-o#readme",
-  "dependencies": {
-    "readline": "^1.3.0"
-  }
+  "homepage": "https://github.com/MerciaMartins/mvp-ninebox-avalia-o#readme"
 }
