--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mvp-ninebox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.ts",
   "scripts": {
-    "start":"tsx ./mvpninebox.ts",
+    "start":"tsx ./src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
